--- a/smdfyp/src/main/res/layout/activity_main.xml
+++ b/smdfyp/src/main/res/layout/activity_main.xml
@@ -1,4 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <GridView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/gridview"
     android:layout_width="match_parent"
@@ -9,4 +12,9 @@
     android:horizontalSpacing="50dp"
     android:stretchMode="columnWidth"
     android:gravity="center"
+    
     />
+    
+
+
+    </LinearLayout>
